feat: finish last labs from sem4

--- a/mownit/lab10/10.Mownit_liniowe_iteracyjne_Lab10 2.ipynb
+++ b/mownit/lab10/10.Mownit_liniowe_iteracyjne_Lab10 2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "5e58c06a-2f7f-45fa-b0bb-a51cef06d648",
    "metadata": {},
    "outputs": [
@@ -48,8 +48,9 @@
        " 100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0  10.0"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "733ffd66-aa6e-4288-85a4-5909858d94fc",
    "metadata": {},
    "outputs": [
@@ -121,8 +122,9 @@
        " 100.0  100.0     100.0     100.0        100.0     100.0     100.0     10.0"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "707fb341",
    "metadata": {},
    "outputs": [
@@ -235,8 +237,9 @@
        "create_initial_solution (generic function with 1 method)"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -265,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "f4238c89",
    "metadata": {},
    "outputs": [
@@ -275,8 +278,9 @@
        "gauss_seidel_laplace (generic function with 1 method)"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -319,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "e0100169",
    "metadata": {},
    "outputs": [
@@ -329,8 +333,9 @@
        "sor_laplace (generic function with 1 method)"
       ]
      },
+     "execution_count": 13,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -391,18 +396,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "12ddd0e4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "chebyshev_laplace (generic function with 2 methods)"
+       "chebyshev_laplace (generic function with 1 method)"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -468,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "4ee4e972",
    "metadata": {},
    "outputs": [
@@ -476,6 +482,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Zbieżność osiągnięta po 237 iteracjach\n",
       "Gauss-Seidel: Zbieżność po 127 iteracjach\n",
       "SOR: Zbieżność po 43 iteracjach (ω = 1.4464626921716894)\n",
       "Chebyshev: Zbieżność po 314 iteracjach\n"
@@ -487,12 +494,14 @@
        "([0.0 0.0 … 0.0 100.0; 0.0 1.3709241969074848 … 48.629070803195084 100.0; … ; 0.0 1.3709241969074848 … 48.629070803195084 100.0; 0.0 0.0 … 0.0 100.0], 314, [12.195121951219514, 16.838674633351438, 12.187773269653892, 7.269802965412691, 5.065906044382371, 3.846281972711392, 3.3920702480070384, 2.9961108856930503, 2.655615809198148, 2.362898845098762  …  1.4763949332080255e-6, 1.4100098552477704e-6, 1.3466097393247086e-6, 1.2860603628167819e-6, 1.228233545133052e-6, 1.1730068722331056e-6, 1.1202634317418686e-6, 1.069891561308676e-6, 1.0217846261037169e-6, 9.7584078836792e-7])"
       ]
      },
+     "execution_count": 15,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "T0 = create_initial_solution(10)\n",
+    "jacobi_laplace(copy(T0))\n",
     "Tg, its_g, err_g = gauss_seidel_laplace(copy(T0))\n",
     "Ts, its_s, err_s = sor_laplace(copy(T0))\n",
     "Tc, its_c, err_c = chebyshev_laplace(copy(T0))"
@@ -1477,7 +1486,7 @@
     "\n",
     "    u = zeros(N, N)  # u[i,j] = przemieszczenie membrany\n",
     "\n",
-    "    # użyjemy SOR, jak wcześniej\n",
+    "    # użyjemy SOR\n",
     "    rho = cos(pi / (N - 2))^2\n",
     "    ω = 2 / (1 + sqrt(1 - rho))\n",
     "\n",
